[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "eigenlake"
version = "0.1.0"
description = "Python SDK for Eigenlake Cloud"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
  "pymdown-extensions>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eigenlake"]
